feat(page): 다수 추가 작업

--- a/_common/resources/html/badge.html
+++ b/_common/resources/html/badge.html
@@ -249,7 +249,7 @@
         </span>
 
         <span class="krds-badge text-bd small">
-            <i class="ssvg-icon ico-yeling-fill"></i>
+            <i class="svg-icon ico-yeling-fill"></i>
             <span>미제출</span>
         </span>
 
@@ -269,7 +269,7 @@
         </span>
 
         <span class="krds-badge text-bd small">
-            <i class="ssvg-icon ico-danger-fill"></i>
+            <i class="svg-icon ico-danger-fill"></i>
             <span>미선정</span>
         </span>
 
