--- a/adm/tmpl/footer.html
+++ b/adm/tmpl/footer.html
@@ -1,5 +1,5 @@
-<footer id="krds-footer">
+<div id="krds-footer">
   <div class="inner">
     <p class="f-copy">COPYRIGHT© 2025 충청남도교육청. ALL RIGHTS RESERVED.</p>
   </div>
-</footer>
+</div>
