--- a/adm/html/member-supervisor-edit.html
+++ b/adm/html/member-supervisor-edit.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="충남교육청" />
-  <title th:text="${pageTitle}">회원관리(사업담당장학사) 최고관리자 member-supervisor-edit</title>
+  <title th:text="${pageTitle}">회원수정(사업) 최고관리자 member-supervisor-edit</title>
 
   <link rel="icon" href="/favicon.ico" />
 
@@ -25,35 +25,32 @@
   <!-- Custom -->
   <script src="../js/admin-custom.js" defer></script>
   <script src="../js/admin-tooltip.js" defer></script>
+  <script src="../js/admin-nav.js" defer></script>
   <link rel="stylesheet" href="../../_common/resources/css/krds-custom.css">
   <link rel="stylesheet" href="../css/admin-custom.css">
-
 </head>
-<body>
+
+<body data-current-menu="member" data-current-submenu="business-staff" >
 
 <div id="wrap" class="g-wrap">
 
-  <!-- 본문 바로가기 영역  -->
   <div id="krds-skip-link">
     <a href="#container">본문 바로가기</a>
   </div>
-  <!-- //본문 바로가기 영역  -->
 
-  <!-- header -->
-  <div id="header"></div>
-  <!-- //header -->
+  <header id="header"></header>
 
   <main id="container">
     <div class="inner cols-2 in-between">
         <!-- Left Section -->
         <div class="left-section max-wd-8">
+            <strong class="page-title">수정 및 변경 관리</strong>
             <!-- 기본정보 Section -->
             <div class="section contents-box contents-box-shadow">
                 <div class="section-header">
                     <h3 class="section-title">기본정보</h3>
                 </div>
                 <div class="form">
-                    <!-- 회원 아이디 -->
                     <div class="form-box">
                         <div class="form-tt">
                             <h4>회원 아이디</h4>
@@ -65,8 +62,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- 성명 -->
                     <div class="form-box">
                         <div class="form-tt">
                             <h4>성명</h4>
@@ -77,8 +72,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- 연락처(사무실) -->
                     <div class="form-box">
                         <div class="form-tt">
                             <h4>연락처(사무실)</h4>
@@ -103,8 +96,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- 연락처(휴대폰) -->
                     <div class="form-box">
                         <div class="form-tt">
                             <h4>연락처(휴대폰)</h4>
@@ -129,8 +120,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- 이메일 -->
                     <div class="form-box">
                         <div class="form-tt">
                             <h4>이메일</h4>
@@ -156,14 +145,12 @@
                     </div>
                 </div>
             </div>
-
             <!-- 소속정보 Section -->
             <div class="section contents-box contents-box-shadow">
                 <div class="section-header">
                     <h3 class="section-title">소속정보</h3>
                 </div>
                 <div class="form">
-                    <!-- 소속 -->
                     <div class="form-box">
                         <div class="form-tt">
                             <h4>소속</h4>
@@ -176,14 +163,12 @@
                     </div>
                 </div>
             </div>
-
             <!-- 기타 Section -->
             <div class="section contents-box contents-box-shadow">
                 <div class="section-header">
                     <h3 class="section-title">기타</h3>
                 </div>
                 <div class="form">
-                    <!-- IP -->
                     <div class="form-box">
                         <div class="form-tt">
                             <h4>IP</h4>
@@ -194,8 +179,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- 등록일 -->
                     <div class="form-box">
                         <div class="form-tt">
                             <h4>등록일</h4>
@@ -206,8 +189,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- 수정일 -->
                     <div class="form-box">
                         <div class="form-tt">
                             <h4>수정일</h4>
@@ -218,8 +199,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- 최근접속일 -->
                     <div class="form-box">
                         <div class="form-tt">
                             <h4>최근접속일</h4>
@@ -233,7 +212,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Right Section -->
         <div class="right-section max-wd-3">
             <!-- 회원정보 Card -->
@@ -265,18 +243,17 @@
                         <span>위로</span>
                         <i class="svg-icon ico-angle up medium"></i>
                     </a>
-                    <a href="javascript:void(0)" class="krds-btn tertiary line small">목록으로</a>
-                    <a href="javascript:void(0)" class="krds-btn primary">네, 수정합니다.</a>
+                    <a href="../html/member-supervisor-list.html" target="_self" class="krds-btn tertiary line small">목록으로</a>
+                    <a href="../html/member-supervisor-list.html" target="_self" class="krds-btn primary">네, 수정합니다.</a>
                 </div>
             </div>
         </div>
     </div>
   </main>
 
-<!-- footer -->
-  <div id="footer"></div>
-<!-- //footer -->
+  <footer id="footer"></footer>
 
-</div>
+</div><!--//wrap-->
+
 </body>
 </html>
