feat:page,ui,header,footer 추가 수정 작업

--- a/adm/html/member-supervisor-edit.html
+++ b/adm/html/member-supervisor-edit.html
@@ -42,10 +42,10 @@
 
   <main id="container">
     <div class="inner cols-2 in-between">
-        <!-- Left Section -->
-        <div class="left-section max-wd-8">
+        <!-- Left -->
+        <div class="left-section">
             <strong class="page-title">수정 및 변경 관리</strong>
-            <!-- 기본정보 Section -->
+            <!-- 기본정보 -->
             <div class="section contents-box contents-box-shadow">
                 <div class="section-header">
                     <h3 class="section-title">기본정보</h3>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <!-- 소속정보 Section -->
+            <!-- 소속정보 -->
             <div class="section contents-box contents-box-shadow">
                 <div class="section-header">
                     <h3 class="section-title">소속정보</h3>
@@ -163,7 +163,7 @@
                     </div>
                 </div>
             </div>
-            <!-- 기타 Section -->
+            <!-- 기타 -->
             <div class="section contents-box contents-box-shadow">
                 <div class="section-header">
                     <h3 class="section-title">기타</h3>
@@ -212,7 +212,7 @@
                 </div>
             </div>
         </div>
-        <!-- Right Section -->
+        <!-- Right -->
         <div class="right-section max-wd-3">
             <!-- 회원정보 Card -->
             <div class="info-card">
