--- a/adm/html/member-teacher-list.html
+++ b/adm/html/member-teacher-list.html
@@ -157,7 +157,7 @@
             </div>
 
             <div class="krds-table-wrap">
-              <table class="tbl col data center" data-table="application-list">
+              <table class="tbl col data center" data-table="member-list">
                 <caption>회원 목록 표</caption>
                 <colgroup>
                   <col style="width: 2%;">
