--- a/adm/tmpl/header.html
+++ b/adm/tmpl/header.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div id="krds-header" class="header header-in">
     <div class="header-wrapper">
         <div class="header-content">
             <!-- Logo -->
