feat(page)사용자페이지

--- a/kr/html/report-mypage-list.html
+++ b/kr/html/report-mypage-list.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title th:text="${pageTitle}">마이페이지 - 사업신청내역</title>
+<title th:text="${pageTitle}">마이페이지 - 결과보고내역</title>
 
 
   <!-- Pretendard GOV -->
@@ -52,7 +52,7 @@
                       <ol class="breadcrumb">
                         <li class="home"><a href="#" class="txt">홈</a></li>
                         <li><a href="#" class="txt">마이페이지</a></li>
-                        <li><a href="#" class="txt">사업신청내역</a></li>
+                        <li><a href="#" class="txt">결과보고내역</a></li>
                       </ol>
                     </nav>
 
@@ -109,11 +109,11 @@
             <div class="krds-tab-area layer">
             <div class="tab line">
                 <ul role="tablist">
-                    <li id="tab_login_01" role="tab" aria-selected="false" aria-controls="panel_login_01" class="active" data-listener-attached="true">
-                        <button type="button" class="btn-tab">사업신청내역<i class="sr-only created"> 선택됨</i></button>
+                    <li id="tab_login_01" role="tab" aria-selected="false" aria-controls="panel_login_01"data-listener-attached="true">
+                        <button type="button" class="btn-tab">사업신청내역</button>
                     </li>
-                    <li id="tab_login_02" role="tab" aria-selected="false" aria-controls="panel_login_02" data-listener-attached="true">
-                        <button type="button" class="btn-tab">결과보고내역</button>
+                    <li id="tab_login_02" role="tab" aria-selected="false" aria-controls="panel_login_02" class="active" data-listener-attached="true">
+                        <button type="button" class="btn-tab">결과보고내역<i class="sr-only created"> 선택됨</i></button>
                     </li>
                 </ul>
             </div>
@@ -124,7 +124,7 @@
                 <table class="tbl col data center">
                     <caption>사업신청관리 목록 표</caption>
                     <colgroup>
-                        <col style="width:4%;">
+                        <col style="width:2%;">
                         <col style="width:5%;">
                         <col>
                         <col style="width:10%;">
