--- a/kr/tmpl/header_president.html
+++ b/kr/tmpl/header_president.html
@@ -1,17 +1,12 @@
-
 <div class="header">
-    <!-- Top Navigation Bar -->
     <div class="header-top">
-        <!-- Logo -->
         <div class="logo">
             <a href=""><img src="../img/logo_cne.svg"></a>
         </div>
-
-        <!-- Main Navigation (GNB) -->
         <nav class="gnb">
             <a href="#" class="gnb-item">사업신청관리</a>
             <a href="#" class="gnb-item">결과보고</a>
-            <a href="#" class="gnb-item">사업승계</a>
+            <a href="#" class="gnb-item">회원목록</a>
         </nav>
 
         <!-- Utility Menu -->
@@ -46,9 +41,9 @@
 
             <div class="depth-column">
                 <div class="depth-title">
-                    사업승계
+                    회원목록
                 </div>
-                <a href="#" class="depth-item">사업승계</a>
+                <a href="#" class="depth-item">회원목록</a>
             </div>
         </div>
     </div>
