--- a/kr/html/application-school-admin-list.html
+++ b/kr/html/application-school-admin-list.html
@@ -6,28 +6,29 @@
 <title th:text="${pageTitle}">사업신청관리 목록</title>
 
 
-<!-- Pretendard GOV -->
+  <!-- Pretendard GOV -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-gov.min.css" crossorigin />
 
-<!-- CSS -->
-<link href="https://cdn.jsdelivr.net/npm/krds-uiux@1.0.1/resources/cdn/krds.min.css" type="text/css" rel="stylesheet" />
-<link rel="stylesheet" href="../css/krds-theme.css">
-<link rel="stylesheet" href="../css/user-custom.css">
-<link rel="stylesheet" href="../../_common/resources/css/krds-custom.css">
+  <!-- Default KRDS JS -->
+  <script src="../../krds/node_modules/krds-uiux/resources/js/component/ui-script.js" defer></script>
+  <script src="../../krds/node_modules/krds-uiux/resources/js/plugin/swiper-bundle.min.js" defer></script>
 
-<!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <!-- Default KRDS CSS -->
+  <link rel="stylesheet" href="../../krds/node_modules/krds-uiux/resources/css/component/output.css" />
+  <link rel="stylesheet" href="../../krds/node_modules/krds-uiux/resources/css/plugin/swiper-bundle.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/krds-uiux@1.0.1/resources/cdn/krds.min.css" type="text/css" rel="stylesheet" />
 
-<!-- JavaScript (defer로 지연 로드 권장) -->
-<script defer src="https://cdn.jsdelivr.net/npm/krds-uiux@1.0.1/resources/cdn/krds.min.js"></script>
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
-<script>
-  // 문서가 준비되면 header와 footer를 불러오기
-  $(function() {
-    $("#header").load("../tmpl/header_sch_adm.html");
-    $("#footer").load("../tmpl/footer.html");
-  });
-</script>
+  <!-- Custom -->
+  <link rel="stylesheet" href="../../_common/resources/css/krds-custom.css">
+  <link rel="stylesheet" href="../css/user-custom.css">
+  <script src="../js/user-custome.js" defer></script>
+  <script src="../js/user-modal.js" defer></script>
+
+  <!-- JavaScript (defer로 지연 로드 권장) -->
+  <script defer src="https://cdn.jsdelivr.net/npm/krds-uiux@1.0.1/resources/cdn/krds.min.js" defer></script>
 </head>
 <body>
 <div id="wrap">
@@ -38,7 +39,7 @@
   <!-- //본문 바로가기 영역  -->
 
   <!-- header include -->
-  <header id="header"></header>
+  <header id="header_sch_adm"></header>
   <!-- //header include -->
 
 <main class="list-container">
@@ -335,50 +336,15 @@
               </table>
             </div>
 
-            <!-- Pagination -->
-            
-            <div class="krds-pagination">
-                <span class="page-navi prev disabled" href="#">이전</span>
-                <div class="page-links">
-                  <a class="page-link active" href="#">1</a>
-                  <a class="page-link" href="#">2</a>
-                  <a class="page-link" href="#">3</a>
-                  <a class="page-link"  href="#">4</a>
-                  <a class="page-link" href="#">5</a>
-                  <a class="page-link" href="#">6</a>
-                  <a class="page-link" href="#">7</a>
-                  <a class="page-link" href="#">8</a>
-                  <span class="page-link link-dot"></span>
-                  <a class="page-link" href="#">99</a>
-                </div>
-                <a class="page-navi next" href="#">다음</a>
-              </div>
+            <div id="pagination"></div>
         </div>
     </main>
 
-
-
-
-
-
-
-
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Live Server 전용 (Spring Boot에서 자동 제거) -->
-  <script th:remove="all" src="../../assets/js/api.js"></script>
-  <script th:remove="all" src="../../assets/js/common.js"></script>
-  <script th:remove="all" src="../../assets/js/board.js"></script>
-
-  
 
 
  <!-- footer include -->
   <div id="footer"></div>
 </div><!-- //wrap -->
 
-<script src="../js/user-custom.js"></script>
 </body>
 </html>
