--- a/kr/html/report-list.html
+++ b/kr/html/report-list.html
@@ -1,87 +1,44 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title th:text="${pageTitle}">결과보고 목록</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title th:text="${pageTitle}">결과보고 목록</title>
 
 
-<!-- Pretendard GOV -->
+  <!-- Pretendard GOV -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-gov.min.css" crossorigin />
 
-<!-- CSS -->
-<link href="https://cdn.jsdelivr.net/npm/krds-uiux@1.0.1/resources/cdn/krds.min.css" type="text/css" rel="stylesheet" />
-<link rel="stylesheet" href="../css/krds-theme.css">
-<link rel="stylesheet" href="../css/user-custom.css">
-<link rel="stylesheet" href="../../_common/resources/css/krds-custom.css">
+  <!-- Default KRDS JS -->
+  <script src="../../krds/node_modules/krds-uiux/resources/js/component/ui-script.js" defer></script>
+  <script src="../../krds/node_modules/krds-uiux/resources/js/plugin/swiper-bundle.min.js" defer></script>
 
-<!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <!-- Default KRDS CSS -->
+  <link rel="stylesheet" href="../../krds/node_modules/krds-uiux/resources/css/component/output.css" />
+  <link rel="stylesheet" href="../../krds/node_modules/krds-uiux/resources/css/plugin/swiper-bundle.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/krds-uiux@1.0.1/resources/cdn/krds.min.css" type="text/css" rel="stylesheet" />
 
-<!-- JavaScript (defer로 지연 로드 권장) -->
-<script defer src="https://cdn.jsdelivr.net/npm/krds-uiux@1.0.1/resources/cdn/krds.min.js"></script>
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
-<script>
-  // 문서가 준비되면 header와 footer를 불러오기
-  $(function() {
-    $("#header").load("../tmpl/header.html");
-    $("#footer").load("../tmpl/footer.html");
-  });
-</script>
+  <!-- Custom -->
+  <link rel="stylesheet" href="../../_common/resources/css/krds-custom.css">
+  <link rel="stylesheet" href="../css/user-custom.css">
+  <script src="../js/user-custome.js" defer></script>
+  <script src="../js/user-modal.js" defer></script>
+
+  <!-- JavaScript (defer로 지연 로드 권장) -->
+  <script defer src="https://cdn.jsdelivr.net/npm/krds-uiux@1.0.1/resources/cdn/krds.min.js" defer></script>
 </head>
+
 <body>
 <div id="wrap">
-  <!-- 본문 바로가기 영역  -->
   <div id="krds-skip-link">
     <a href="#breadcrumb">본문 바로가기</a>
   </div>
-  <!-- //본문 바로가기 영역  -->
 
-  <!-- header include -->
   <header id="header"></header>
-  <!-- //header include -->
 
-
-  <!-- Modal -->
-<section id="reasonDetailModal" class="krds-modal fade" role="dialog" aria-labelledby="tit_reasonDetailModal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      
-      <!-- Modal Header -->
-      <div class="modal-header">
-        <h2 id="tit_reasonDetailModal" class="modal-title">사유 상세보기</h2>
-        <p class="modal-description">미제출, 반송, 반려 등의 사유가 출력됩니다.</p>
-      </div>
-
-      <!-- Modal Contents -->
-      <div class="modal-conts">
-        <div class="conts-area">
-          <div class="modal-box">
-            <div class="modal-box-content">
-              <p class="modal-box-text">사업 내용이 충분하지 않습니다.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal Buttons -->
-      <div class="modal-btn btn-wrap">
-        <button type="button" class="krds-btn medium primary close-modal">확인</button>
-      </div>
-
-      <!-- Close Button -->
-      <button type="button" class="krds-btn medium icon btn-close close-modal" aria-label="닫기">
-        <span class="sr-only">닫기</span>
-        <i class="svg-icon ico-popup-close"></i>
-      </button>
-
-    </div>
-  </div>
-
-  <!-- Modal Background -->
-  <div class="modal-back"></div>
-</section>
-<!-- //Modal -->
 
 <main class="list-container">
         <div class="list-inner">
@@ -204,7 +161,7 @@
                     </span>
                     </td>
                     <td>
-                      <a href="javascript:void(0)" download="" class="krds-btn small line">
+                      <a class="krds-btn small line open-modal" data-target="modal-reason-view" title="사유 보기">
                         <i class="svg-icon ico-docu"></i>
                       </a>
                     </td>
@@ -266,7 +223,7 @@
                     </span>
                     </td>
                     <td>
-                      <a href="javascript:void(0)" download="" class="krds-btn small line">
+                      <a class="krds-btn small line open-modal" data-target="modal-reason-view" title="사유 보기">
                         <i class="svg-icon ico-docu"></i>
                       </a>
                     </td>
@@ -299,7 +256,7 @@
                       </span>
                     </td>
                     <td>
-                      <a href="javascript:void(0)" download="" class="krds-btn small line">
+                      <a class="krds-btn small line open-modal" data-target="modal-reason-view" title="사유 보기">
                         <i class="svg-icon ico-docu"></i>
                       </a>
                     </td>
@@ -456,50 +413,13 @@
               </table>
             </div>
 
-            <!-- Pagination -->
-            
-            <div class="krds-pagination">
-                <span class="page-navi prev disabled" href="#">이전</span>
-                <div class="page-links">
-                  <a class="page-link active" href="#">1</a>
-                  <a class="page-link" href="#">2</a>
-                  <a class="page-link" href="#">3</a>
-                  <a class="page-link"  href="#">4</a>
-                  <a class="page-link" href="#">5</a>
-                  <a class="page-link" href="#">6</a>
-                  <a class="page-link" href="#">7</a>
-                  <a class="page-link" href="#">8</a>
-                  <span class="page-link link-dot"></span>
-                  <a class="page-link" href="#">99</a>
-                </div>
-                <a class="page-navi next" href="#">다음</a>
-              </div>
+            <div id="pagination"></div>
         </div>
     </main>
 
-
-
-
-
-
-
-
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Live Server 전용 (Spring Boot에서 자동 제거) -->
-  <script th:remove="all" src="../../assets/js/api.js"></script>
-  <script th:remove="all" src="../../assets/js/common.js"></script>
-  <script th:remove="all" src="../../assets/js/board.js"></script>
-
-  
-
-
- <!-- footer include -->
-  <div id="footer"></div>
+<div id="footer"></div>
 </div><!-- //wrap -->
 
-<script src="../js/user-custom.js"></script>
+<div id="modalLoad"></div>
 </body>
 </html>
